Fixed Schedule overlap

--- a/src/sections/schedule/schedule.scss
+++ b/src/sections/schedule/schedule.scss
@@ -7,17 +7,6 @@
 	align-items: center;
 	row-gap: 6rem;
 
-	grid-template-rows: 10rem min-content;
-
-	@media only screen and (max-width: 100em) {
-		display: flex;
-		flex-direction: column;
-	}
-
-	&__header {
-		grid-row: 1;
-	}
-
 	&__container {
 		display: flex;
 		flex-direction: column;
